@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-08-24T08:13:50Z",
-  "count_outdated" : 168,
-  "uniques_outdated" : 142,
+  "timestamp" : "2023-08-25T08:13:44Z",
+  "count_outdated" : 169,
+  "uniques_outdated" : 143,
   "count" : 175,
   "uniques" : 149,
   "clones" : [
-    {
-      "timestamp": "2023-08-11T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-08-15T00:00:00Z",
       "count": 1,
